# bytecards

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: rust.yml
src/: cards.rs  crypt.rs  main.rs  proto.rs
