[package]
name = "bytecards"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.97"
crypto-bigint = { version = "0.6.1", features = ["alloc", "serde"] }
crypto-primes = "0.6.1"
postcard = { version = "1.1.1", features = ["alloc", "postcard-derive"] }
serde = "1.0.218"
serdect = "0.3.0"
